# Scooter-Application

./: README.md
Labor5_DHG_official/: CMakeLists.txt  main.cpp
Labor5_DHG_official/Controller/: Controller.cpp  Controller.h
Labor5_DHG_official/Domain/: Elektroscooter.cpp  Elektroscooter.h
Labor5_DHG_official/Repository/: AbstractRepository.h  CSVRepoScooters  CSV_File_Repo.cpp  CSV_File_Repo.h  ElektroRepo.cpp  ElektroRepo.h
Labor5_DHG_official/Tests/: Test.cpp  Test.h
Labor5_DHG_official/UI/: ElektroUI.cpp  ElektroUI.h
